import logging
from contextlib import suppress
from typing import Any, Dict, Literal, Optional, Type
import asyncio

from sonic_protocol.field_names import EFieldName
import sonic_protocol.schema as protocol_defs
import sonic_protocol.python_parser.commands as cmds
from soniccontrol.procedures.procedure import Procedure, ProcedureArgs, ProcedureType
from soniccontrol.procedures.procedure_instantiator import ProcedureInstantiator
from soniccontrol.procedures.remote_procedure_state import RemoteProcedureState
from soniccontrol.sonic_device import SonicDevice
from soniccontrol.logger.utils import get_base_logger
from soniccontrol.utils.events import Event, EventManager

class ProcedureController(EventManager):
    PROCEDURE_STOPPED: Literal["<<PROCEDURE_STOPPED>>"] = "<<PROCEDURE_STOPPED>>"
    PROCEDURE_RUNNING: Literal["<<PROCEDURE_RUNNING>>"] = "<<PROCEDURE_RUNNING>>"

    def __init__(self, device: SonicDevice, updater: EventManager, logger = None):
        super().__init__()
        if logger is None:
            logger = get_base_logger(device._logger)
        self._logger = logging.getLogger(logger.name + "." + ProcedureController.__name__)
        self._device = device

        self._logger.debug("Instantiate procedures")
        self._procedures: Dict[ProcedureType, Procedure] = {}
        self._running_proc_task: Optional[asyncio.Task] = None
        self._running_procedure: Procedure | None = None
        self._remote_procedure_state = RemoteProcedureState()
        self._are_procedures_loaded = False

        updater.subscribe("update", self._on_update)

    async def load_procs(self):
        """
        This function needs to be called once to populate the internal procedure list.

        Call this once before using the procedure controller.
        """
        self._procedures = await ProcedureInstantiator().instantiate_procedures(self._device)
        self._are_procedures_loaded = True

    @property
    def are_procedures_loaded(self):
        return self._are_procedures_loaded

    @property
    def proc_args_list(self) -> Dict[ProcedureType, Type[ProcedureArgs]]:
        return { 
            proc_type: procedure.get_args_class() 
            for proc_type, procedure in self._procedures.items() 
        }

    @property
    def is_proc_running(self) -> bool:
        return not (self._running_proc_task is None or self._running_proc_task.done() or self._running_proc_task.cancelled())

    def execute_proc(self, proc_type: ProcedureType, args: Any, event_loop: asyncio.AbstractEventLoop | None = None) -> None:
        if event_loop is None:
            event_loop = asyncio.get_running_loop()
        
        if proc_type not in self._procedures:
            raise Exception(f"The procedure {repr(proc_type)} is not available for the current device")
        procedure = self._procedures.get(proc_type, None)
        if procedure is None:
            raise Exception(f"The procedure {repr(proc_type)} is not available for the current device")
       
        self.execute_procedure(procedure, proc_type, args, event_loop)


    def execute_procedure(self, procedure: Procedure, proc_type: ProcedureType, args: Any, event_loop: asyncio.AbstractEventLoop | None = None):
        if event_loop is None:
            event_loop = asyncio.get_running_loop()
        
        if self.is_proc_running:
            raise Exception("There is already a procedure running")
        
        self._logger.info("Run procedure %s with args %s", proc_type.name, str(args))
    
        async def proc_task():
            try:
                await procedure.execute(self._device, args)
                if procedure.is_remote:
                    await self._remote_procedure_state.wait_till_procedure_halted()          
            except asyncio.CancelledError:
                pass
            except Exception:
                raise
            finally:
                try:
                    if procedure.is_remote:
                        await self._device.stop_procedures()

                    await self._device.set_signal_off()
                finally:
                    self._on_proc_finished()
                

        self._remote_procedure_state.reset_completion_flag()
        self._running_procedure = procedure
        self._running_proc_task = event_loop.create_task(proc_task())
        self.emit(Event(ProcedureController.PROCEDURE_RUNNING, proc_type=proc_type))

    async def fetch_args(self, proc_type: ProcedureType) -> Dict[str, Any]:
        procedure = self._procedures.get(proc_type, None)
        if procedure is None:
            raise Exception(f"The procedure {repr(proc_type)} is not available for the current device")
        return await procedure.fetch_args(self._device)


    async def stop_proc(self) -> None:
        self._logger.info("Stop procedure")
        if self._running_proc_task: 
            # Create a local reference as self._running_proc_task is being set to None in _on_proc_finished
            task_to_stop = self._running_proc_task
            running_procedure = self._running_procedure
            if running_procedure is not None and running_procedure.request_stop():
                try:
                    await asyncio.wait_for(task_to_stop, timeout=5.0)
                    return
                except asyncio.TimeoutError:
                    self._logger.warning("Procedure did not stop cooperatively, falling back to cancellation")

            task_to_stop.cancel()
            with suppress(asyncio.CancelledError):
                await task_to_stop

    async def wait_for_proc_to_finish(self) -> None:
        await self._remote_procedure_state.wait_till_procedure_halted()

        # Edgecase: is_proc_running checks only the _running_proc_task and not the remote_procedure_state
        # therefore we need to cancel the task explicitly here
        if self._running_proc_task:
            self._running_proc_task.cancel()

            await self._running_proc_task

    def _on_proc_finished(self) -> None:
        self._logger.info("Procedure stopped")
        self._running_proc_task = None
        self._running_procedure = None
        # NOTE we could also do this only when procedure is a local one
        self._remote_procedure_state.halt_manually()
        self.emit(Event(ProcedureController.PROCEDURE_STOPPED))

    def _on_update(self, event: Event) -> None:
        try:
            procedure: protocol_defs.Procedure = event.data["status"][EFieldName.PROCEDURE]
        except KeyError:
            self._logger.debug("No procedure status found in event")
            return
        proc_type: ProcedureType | None = None
        match procedure:
            case protocol_defs.Procedure.NO_PROC:
                proc_type = None
            case protocol_defs.Procedure.AUTO:
                proc_type = ProcedureType.AUTO
            case protocol_defs.Procedure.WIPE:
                proc_type = ProcedureType.WIPE
            case protocol_defs.Procedure.TUNE:
                proc_type = ProcedureType.TUNE
            case protocol_defs.Procedure.SCAN:
                proc_type = ProcedureType.SCAN
            case protocol_defs.Procedure.RAMP:
                proc_type = ProcedureType.RAMP
            case protocol_defs.Procedure.DUTY_CYCLE:
                proc_type = ProcedureType.DUTY_CYCLE
            case protocol_defs.Procedure.ANOMALY_ROUTINE:
                proc_type = ProcedureType.ANOMALY_ROUTINE
            case _:
                assert False, f"Case not covered: {procedure}"
        self._remote_procedure_state.update(proc_type)
